2001-04-14  Martin Baulig  <baulig@suse.de>

	* gnome-init.h (gtk_module_info): Removed external declaration.
	(LIBGNOMEUI_INIT): Removed #define.

	* gnome-init.c (libgnome_module_requires): Added libgnomecanvas_module_info.
	(gtk_module_info): Removed GTK+ init code; this is already in libgnomecanvas.
	(BUILD_UNUSED_LEGACY_CODE): Removed all code which was #ifdef'ed out by this.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-helpsys.c (gnome_help_view_find_help_id): Use
	gnome_program_locate_file() instead of gnome_datadir_file().
	(gnome_help_path_resolve, gnome_help_app_topics): Use
	gnome_program_locate_file() instead of gnome_help_file().

	* gnome-init.c (libgnomeui_rc_parse): Use gnome_program_locate_file()
	instead of gnome_datadir_file().

	* gnome-icon-selector.c (gnome_icon_selector_add_defaults): Use
	gnome_program_locate_file() to get a list of all pixmap dirs.

	* gnome-about.c (gnome_about_load_logo): Use
	gnome_program_locate_file() instead of gnome_pixmap_file().
	* gnome-app-helper.c (create_pixmap): Likewise.
	* gnome-app-util.c (gnome_window_set_icon_from_file): Likewise.
	* gnome-stock.c (gnome_stock_pixmap_entry_get_gdk_pixbuf): Likewise.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-messagebox.c: For images which we install in ../images/,
	use an absolute filename using GNOMEUIPIXMAPDIR.

Sun Mar 25 15:26:29 2001  George Lebl <jirka@5z.com>

	* gnome-icon-item.c: use the editable interface to get the values
	  instead of grabbing it directly of the structure, however added
	  FIXME's since that needs to be tested and verified

Sun Mar 25 03:04:13 2001  George Lebl <jirka@5z.com>

	* gnome-app-helper.c, gnome-file-saver.c, gnome-gconf.c,
	  gnome-recently-used.c, gnome-selector.c:  GConfClient
	  is no longer a GtkObject, so use g_object_* methods on
	  it and not gtk_object_

Sun Mar 25 02:13:43 2001  George Lebl <jirka@5z.com>

	* gnome-app-helper.c: gconf_client is now a GObject, not GtkObject
