@@ -30,7 +30,7 @@
 
 #include "gnome-about.h"
 #include <libgnome/gnome-util.h>
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 #include <libgnome/gnome-url.h>
 #include "gnome-dialog.h"
 #include "gnome-dialog-util.h"
