@@ -26,7 +26,7 @@
 
 #include "gnome-app-util.h"
 
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 #include <libgnome/gnome-util.h>
 
 #include "gnome-stock.h"
