@@ -45,7 +45,7 @@
 #include <gtk/gtk.h>
 #include <libgnomebase/gnome-program.h>
 #include <libgnomebase/gnome-defs.h>
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 #include <libgnome/gnome-util.h>
 #include <libgnome/gnome-config.h>
 #include "gnome-uidefs.h"
