@@ -23,7 +23,7 @@
 
 #include "gnome-dialog.h"
 #include <libgnome/gnome-util.h>
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 #include <string.h> /* for strcmp */
 #include <gtk/gtk.h>
 #include <gdk/gdkkeysyms.h>
