@@ -29,7 +29,7 @@
 #include <libgnomecanvas/gnome-canvas-rect-ellipse.h>
 #include <libgnomecanvas/gnome-canvas-text.h>
 #include "gnome-uidefs.h"
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 
 #include "gnome-druid-page-standard.h"
 
