@@ -31,7 +31,7 @@
 
 #include <libgnomebase/gnome-defs.h>
 #include <libgnome/gnome-config.h>
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 #include <libgnome/gnome-util.h>
 #include "gnome-app.h"
 #include "gnome-app-helper.h"
