@@ -27,7 +27,7 @@
 #include <config.h>
 #include <libgnomebase/gnome-defs.h>
 #include <libgnome/gnome-config.h>
-#include "gnome-i18nP.h"
+#include <libgnomebase/gnome-i18n.h>
 #include <libgnome/gnome-util.h>
 #include <libgnomeui/gnome-app.h>
 #include <libgnomeui/gnome-app-helper.h>
